cd|ci implemented & api dockerized & script updated
